# llm_agent

./: README.md  pyproject.toml
research/: customer_support.ipynb  research_write_article.ipynb
src/financial_analyst/: crew.py  main.py
src/financial_analyst/config/: agents.yaml  tasks.yaml
src/financial_analyst/tools/: custom_tool.py  sec_tools.py
